# FreeCAE

./: .gitignore  .gitmodules  CMakeLists.txt
lib/QtADS/lib/: qtadvanceddocking-qt6d.lib
lib/SARibbonBar/include/SARibbonBar/: SARibbonBar.h  SARibbonBarVersionInfo.h
lib/SARibbonBar/lib/: SARibbonBard.lib
lib/SARibbonBar/lib/cmake/SARibbonBar/: SARibbonBarConfig.cmake
lib/SARibbonBar/share/SARibbonBar_amalgamate/: SARibbon.cpp  SARibbon.h
lib/occt/: custom_vc14_64.bat  env.bat
lib/occt/cmake/: OpenCASCADECompileDefinitionsAndFlags-debug.cmake  OpenCASCADEConfig.cmake  OpenCASCADEDEToolsTargets.cmake  OpenCASCADEDataExchangeTargets.cmake  OpenCASCADEDrawTargets-debug.cmake  OpenCASCADEDrawTargets.cmake  OpenCASCADEFoundationClassesTargets.cmake  OpenCASCADEModelingAlgorithmsTargets.cmake  OpenCASCADEVisualizationTargets-debug.cmake  OpenCASCADEVisualizationTargets.cmake
lib/occt/inc/: Standard_Version.hxx
lib/occt/win64/vc14/libd/: TKBO.lib  TKBRep.lib  TKBin.lib  TKBinL.lib  TKBinTObj.lib  TKBinXCAF.lib  TKBool.lib  TKCAF.lib  TKCDF.lib  TKDCAF.lib  TKDE.lib  TKDECascade.lib  TKDEGLTF.lib  TKDEIGES.lib  TKDEOBJ.lib  TKDEPLY.lib  TKDESTL.lib  TKDEVRML.lib  TKDraw.lib  TKExpress.lib  TKFeat.lib  TKFillet.lib  TKG2d.lib  TKG3d.lib  TKGeomAlgo.lib  TKGeomBase.lib  TKHLR.lib  TKIVtk.lib  TKIVtkDraw.lib  TKLCAF.lib  TKMath.lib  TKMesh.lib  TKMeshVS.lib  TKOffset.lib  TKOpenGl.lib  TKOpenGlTest.lib  TKPrim.lib  TKQADraw.lib  TKRWMesh.lib  TKService.lib  (+28 more)
lib/spdlog/lib/pkgconfig/: spdlog.pc
lib/vtk/lib/: vtkChartsCore-9.4d.lib  vtkCommonColor-9.4d.lib  vtkCommonComputationalGeometry-9.4d.lib  vtkCommonDataModel-9.4d.lib  vtkCommonExecutionModel-9.4d.lib  vtkCommonMath-9.4d.lib  vtkCommonMisc-9.4d.lib  vtkCommonSystem-9.4d.lib  vtkCommonTransforms-9.4d.lib  vtkDICOMParser-9.4d.lib  vtkDomainsChemistry-9.4d.lib  vtkDomainsChemistryOpenGL2-9.4d.lib  vtkFiltersAMR-9.4d.lib  vtkFiltersCellGrid-9.4d.lib  vtkFiltersCore-9.4d.lib  vtkFiltersExtraction-9.4d.lib  vtkFiltersFlowPaths-9.4d.lib  vtkFiltersGeneral-9.4d.lib  vtkFiltersGeneric-9.4d.lib  vtkFiltersGeometry-9.4d.lib  vtkFiltersGeometryPreview-9.4d.lib  vtkFiltersHybrid-9.4d.lib  vtkFiltersHyperTree-9.4d.lib  vtkFiltersImaging-9.4d.lib  vtkFiltersModeling-9.4d.lib  vtkFiltersParallel-9.4d.lib  vtkFiltersParallelImaging-9.4d.lib  vtkFiltersPoints-9.4d.lib  vtkFiltersProgrammable-9.4d.lib  vtkFiltersReduction-9.4d.lib  vtkFiltersSMP-9.4d.lib  vtkFiltersSelection-9.4d.lib  vtkFiltersSources-9.4d.lib  vtkFiltersStatistics-9.4d.lib  vtkFiltersTemporal-9.4d.lib  vtkFiltersTensor-9.4d.lib  vtkFiltersTexture-9.4d.lib  vtkFiltersTopology-9.4d.lib  vtkFiltersVerdict-9.4d.lib  vtkGUISupportQt-9.4d.lib  (+119 more)
lib/vtk/lib/cmake/vtk-9.4/: VTK-targets-debug.cmake  VTK-targets.cmake  VTK-vtk-module-find-packages.cmake  vtk-config.cmake
src/: CMakeLists.txt
src/APP/: AppWidget.cpp  AppWidget.h  AppWidget.ui  CMakeLists.txt  MainWindow.cpp  MainWindow.h  Res.qrc  main.cpp
